--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.4.1",
+    "autoprefixer": "^10.4.16",
     "axios": "^0.27.2",
     "element-plus": "^2.3.14",
     "pinia": "^2.1.6",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue-virtual-scroller": "2.0.0-beta.8"
