--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "autoprefixer": "^10.4.16",
     "axios": "^0.27.2",
     "element-plus": "^2.3.14",
+    "lorem-ipsum": "^2.0.8",
     "pinia": "^2.1.6",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
+    "vue-sticky-directive": "^0.0.10",
     "vue-virtual-scroller": "2.0.0-beta.8"
   },
   "devDependencies": {
