--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@types/crypto-js": "^4.1.2",
     "@vueuse/core": "^10.4.1",
     "autoprefixer": "^10.4.16",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
     "element-plus": "^2.3.14",
+    "eventemitter3": "^5.0.1",
+    "jsencrypt": "^3.3.2",
     "lorem-ipsum": "^2.0.8",
     "pinia": "^2.1.6",
     "postcss": "^8.4.31",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue-sticky-directive": "^0.0.10",
-    "vue-virtual-scroller": "2.0.0-beta.8"
+    "vue-virtual-scroller": "2.0.0-beta.8",
+    "workerpool": "^6.5.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
