--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,8 @@
     "allowUnusedLabels": true,
     "strictPropertyInitialization": false,
     "noEmit": true,
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false
   }
 }
