--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,6 +8,8 @@
     "allowUnusedLabels": true,
     "strictPropertyInitialization": false,
     "noEmit": true,
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false
   }
 }
