--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@types/crypto-js": "^4.1.2",
+    "@types/workerpool": "^6.4.4",
     "@vueuse/core": "^10.4.1",
     "autoprefixer": "^10.4.16",
     "axios": "^0.27.2",
