--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "dexie": "^3.2.4",
     "element-plus": "^2.3.14",
     "eventemitter3": "^5.0.1",
     "jsencrypt": "^3.3.2",
