--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eventemitter3": "^5.0.1",
     "jsencrypt": "^3.3.2",
     "lorem-ipsum": "^2.0.8",
+    "p-queue": "^7.4.1",
     "pinia": "^2.1.6",
     "postcss": "^8.4.31",
     "socket.io-client": "^4.7.2",
